--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@ html , body {
     font-weight: 300;
     font-family: Arial, Helvetica, sans-serif;
 }
+button{
+    padding: 10px  15px;
+    border: none;
+    transition: 0.2s ease-in-out;
+}
+button:hover{
+    opacity: 0.8;
+    transition: 0.2s ease-in-out;
+}
 /* naivations */
 nav{
     box-shadow: 5px 5px 5px rgb(46, 46, 46, 0.05);
@@ -31,4 +40,63 @@ nav{
 }
 .bar-icon{
     font-size: 32px;
+}
+/* hero section */
+.hero{
+    display: flex;
+    gap: 100px;
+    justify-content: center;
+    align-items: center;
+}
+/* .hero_img{
+padding: 100px
+} */
+.img_01{
+    max-width: 500px;
+    height: auto;   
+    border-radius: 50%;
+}
+.hero_contant{
+     display: flex;
+     flex-direction: column;
+     gap: 20px;
+}
+.tag
+{
+    background-color: #e61010;
+    padding: 5px 10px;
+    color: white;
+    align-self: flex-start;
+
+}
+.hero_contant h1{
+    font-size: 72px;
+    line-height: 1.2; 
+    font-weight: 400;
+}
+.explore_btn{
+    background-color: #ed0a0a;
+    align-self: flex-start;
+}
+@media (max-width:786px){
+    .hero{
+        flex-direction: column;
+
+    }
+    .hero_img{
+        display: flex;
+        justify-content: center;
+    }
+    .hero_img{
+       width: 90%;
+    }
+    .hero_contant{
+        gap: 10px;
+        padding: 10px;
+    }
+    .hero_contant h1{
+
+        font-size: 32px;
+        
+    }
 }
