--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ nav{
     margin-bottom: 32px;
     background: white;
     padding: 10px;
+    z-index: 50px;
 }
 .navigation{
     display: flex;
@@ -63,7 +64,7 @@ padding: 100px
 }
 .tag
 {
-    background-color: #e61010;
+    background-color: #66d46d;
     padding: 5px 10px;
     color: white;
     align-self: flex-start;
@@ -75,9 +76,125 @@ padding: 100px
     font-weight: 400;
 }
 .explore_btn{
-    background-color: #ed0a0a;
+    background-color: #f3da6d;
     align-self: flex-start;
 }
+.features{
+    margin-top: 100px;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+.feature{
+    display: flex;
+    gap: 20px;;
+}
+.feature img{
+    width: 72px;
+}
+.feature:hover{
+    transition: 0.2 ease-in-out;
+    box-shadow: 5px 5px 5px black;
+}
+.divider{
+    border: 1px solid #5e5a5a;
+    margin: 20px 0px ;
+}
+/* manu  */
+.manu {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    margin: 50px 0px ;
+    align-items: center;
+  }
+  
+  .manu .tag {
+    align-self: center;
+  }
+  .grid-img{
+    border-radius: 10px;
+    transition: 0.2 ease-in-out;
+  }
+  .grid-img:hover{
+    transform: scale(1.05) ;
+    transition: 0.2 ease-in-out;
+  }
+  
+  .grid {
+    display: grid;
+    gap: 10px;
+    grid-template-areas:
+      "I1 I1 I2 I3"
+      "I1 I1 I2 I7"
+      "I4 I5 I6 I7";
+  }
+  
+  .iteam1 {
+    grid-area: I1;
+  }
+  
+  .iteam2 {
+    grid-area: I2;
+  }
+  
+  .iteam3 {
+    grid-area: I3;
+  }
+  
+  .iteam4 {
+    grid-area: I4;
+  }
+  
+  .iteam5 {
+    grid-area: I5;
+  }
+  
+  .iteam6 {
+    grid-area: I6;
+  }
+  
+  .iteam7 {
+    grid-area: I7;
+  }
+  
+  .grid img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+  }
+  /* footer  */
+  footer{
+    background-color: #f3da6d;
+  }
+  .link_list h3{
+         margin-bottom: 10px;
+         color: gray;
+  }
+  .link_list ul{
+      list-style: none;
+  }
+  .link_list ul li{
+      font-size: 16px;
+      margin-bottom: 5px;
+  }
+  .news_latter{
+    padding: 5px 40px;
+    margin-bottom: 10px;
+    color: #5e5a5a;
+  }
+  .footer_contaner{
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .lcon_contener{
+    display: flex;
+    gap: 15px;
+    font-size: 32px;
+  }
+
 @media (max-width:786px){
     .hero{
         flex-direction: column;
@@ -98,5 +215,17 @@ padding: 100px
 
         font-size: 32px;
         
+    }
+    .features{
+        flex-direction: column;
+    }
+    .feature{
+         flex-direction: column;
+    }
+    .grid{
+        padding:10px;
+    }
+    .grid-img{
+        border-radius: 0px;
     }
 }
